--- a/_config.yml
+++ b/_config.yml
@@ -3,17 +3,17 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: plwdxiiu's blog 
+title: CC's blog 
 subtitle: I'm CC, a front-end hobbyist. 
 description: This is my blog, to record my front-end learning journey and daily life. 
 keywords: 'front-end, javascript, css, html, github, vue'
-author: plwdxiiu
+author: CC
 language: en
 timezone: 'Asia/Shanghai'
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: http://example.com
+url: https://example.com
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 pretty_urls:
@@ -44,12 +44,12 @@ post_asset_folder: false
 relative_link: false
 future: true
 highlight:
-  enable: true
-  line_number: true
-  auto_detect: false
+  enable: false
+  line_number: false
+  auto_detect: true
   tab_replace: ''
   wrap: true
-  hljs: false
+  hljs: true
 prismjs:
   enable: false
   preprocess: true
@@ -62,7 +62,7 @@ prismjs:
 # order_by: Posts order. (Order by date descending by default)
 index_generator:
   path: ''
-  per_page: 10
+  per_page: 9
   order_by: -date
 
 # Category & Tag
@@ -85,7 +85,7 @@ updated_option: 'mtime'
 
 # Pagination
 ## Set per_page to 0 to disable pagination
-per_page: 10
+per_page: 9
 pagination_dir: page
 
 # Include / Exclude file(s)
@@ -97,11 +97,14 @@ ignore:
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: cupertino
+theme: Quiet 
+# 首页文章布局 默认 'card' 可选择 'block-card'
+home_layout: card
+
 
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
   type: git 
-  repo: https://github.com/plwdxiiu/plwdxiiu.github.io.git 
+  repo: https://github.com/plwdxiiu/CCchen.github.io.git 
   branch: master
